<resources>
    <string name="app_name">Wifi Direct Chat App</string>
    <string name="connection_status">Connection Status</string>
    <string name="turn_wifi_on">Turn Wifi On</string>
    <string name="turn_wifi_off">Turn Wifi Off</string>
    <string name="device_discovery">Peers Discovery</string>
    <string name="peers_list_label">Peers List</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="ip_hint">IP</string>
    <string name="port_hint">Port</string>
    <string name="connect_btn">Connect</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="default_port">3000</string>
    <string name="default_ip">192.168.0.138</string>
    <string name="username">username</string>
    <string name="server_address">Server Address</string>
    <string name="peers_discovery_started">Peers discovery started!</string>
    <string name="peers_discovery_fail_notification">Peers discovery starting failed, pls check the connection!</string>
    <string name="host">HOST</string>
    <string name="client">CLIENT</string>
</resources>