<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/connection_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/connection_status"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="casual"
        />

    <TextView
        android:id="@+id/connection_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/connection_status_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/disconnected"
        />

    <Button
        android:id="@+id/device_discovery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_discovery"
        app:layout_constraintLeft_toRightOf="@id/wifi_toggle_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connection_status_tv"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        />

    <Button
        android:id="@+id/wifi_toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_wifi_on"
        app:layout_constraintTop_toBottomOf="@id/connection_status_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/device_discovery_btn"
        app:layout_constraintBaseline_toBaselineOf="@id/device_discovery_btn"
        />

    <TextView
        android:id="@+id/peers_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peers_list_label"
        app:layout_constraintTop_toBottomOf="@id/device_discovery_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/device_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="32dp"
        />

    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peers_list_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        />
</androidx.constraintlayout.widget.ConstraintLayout>